# Asistente_de_voz

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements-nlp.txt  requirements-prod.txt  requirements.txt
data/intents/: intents_dataset.json
data/responses/: responses.json
docs/: ACCIONES_NAVEGADOR.md  API.md  ARCHITECTURE.md  BACKEND.md  DATOS_Y_MODELOS.md  DESPLIEGUE_SIN_DOCKER.md  FRONTEND.md  INDICE.md  LIBRERIAS_Y_DEPENDENCIAS.md  SCRIPTS.md  WAKE_WORD.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useOpenWakeWord.ts  useVoiceAssistant.ts
scripts/: annotate_frontend_spanish.py  annotate_spanish_docstrings.py  docker-entrypoint.sh  download_wakeword_model.py  ensure_intent_model.py  install_deps.ps1  render_build.sh  render_start.sh  run_api.bat  run_api.ps1  test_score_chunk.py  train_intent_model.py  train_wakeword_placeholder.py
src/asistente_voz/: __init__.py  main.py
tests/: conftest.py
tests/actions/: test_intent_action_executor.py
tests/api/: test_health.py  test_intents.py  test_root.py  test_voice.py
tests/ml/: conftest.py  test_intents_repository.py  test_keyword_intent_matcher.py  test_text_cleaner.py
tests/responses/: test_response_loader.py  test_response_service.py
tests/speech/: test_audio_validator.py
tests/wakeword/: test_activation_listener.py
(+151 files in other folders)
